--- a/index.html
+++ b/index.html
@@ -25,6 +25,36 @@
             <p><i>a web developer</i></p>
         </section>
 
+        <section class="skills">
+            <div class="contendor-skills">
+                <h1>My skills</h1>
+                <span><h3>HTML</h3> <i class="fa-brands fa-html5"></i></span>
+                <span class="porcentaje">
+                    <div style="width:95%"></div>
+                </span>
+                <span><h3>CSS</h3><i class="fa-brands fa-css3-alt"></i></span>
+                <span class="porcentaje">
+                    <div style="width:85%"></div>
+                </span>
+                <span><h3>JavaScript</h3><i class="fa-brands fa-square-js"></i></span>
+                <span class="porcentaje">
+                    <div style="width:80%"></div>
+                </span>
+                <span><h3>Python</h3><i class="fa-brands fa-python"></i></span>
+                <span class="porcentaje">
+                    <div style="width:90%"></div>
+                </span>
+                <span><h3>Git</h3><i class="fa-brands fa-git-alt"></i></span>
+                <span class="porcentaje">
+                    <div style="width: 65%"></div>
+                </span>
+                <span><h3>GitHub</h3><i class="fa-brands fa-github"></i></span>
+                <span class="porcentaje">
+                    <div style="width:70%"></div>
+                </span>
+            </div>
+        </section>
+
         <section class="projects" id="projects">
 
             <div class="contenedor-titulo">
@@ -33,7 +63,7 @@
 
             <div class="projects-grid">
 
-                <a href="" alt="mamen" class="card" target="_blank">
+                <a href="https://github.com/ramiroschettino/staticPage" alt="Dr borlaug's project" class="card" target="_blank">
                     <img src="dr.jpg" alt="Survey form">
                     <p>Dr Borlaug's project</p>
                 </a>
@@ -43,7 +73,7 @@
                     <p>HTML CSS Curriculum</p>
                 </a>
 
-                <a href="" alt="mamen" class="card" target="_blank">
+                <a href="https://github.com/ramiroschettino/documentationPage" alt="Documentation project" class="card" target="_blank">
                     <img src="docu.jpg" alt="Survey form">
                     <p>Documentation Page</p>
                 </a>
